<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="150dp"
	android:layout_height="210dp"
	android:layout_marginStart="25dp"
	android:layout_marginTop="25dp"
	android:background="@drawable/edit_text_neutral_border"
	android:clickable="true"
	android:focusable="true">

	<!--android:background="?selectableItemBackground"-->


	<View
		android:layout_width="147dp"
		android:layout_height="1px"
		android:layout_marginTop="10dp"
		android:layout_marginEnd="2dp"
		android:layout_marginBottom="29dp"
		android:background="@color/medication_stock_main"
		app:layout_constraintBottom_toBottomOf="@+id/nom"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView3"
		app:layout_constraintVertical_bias="0.0" />

	<View
		android:id="@+id/view"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginHorizontal="1dp"
		android:background="@color/medication_stock_main"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/nom" />

	<View
		android:layout_width="147dp"
		android:layout_height="1px"
		android:layout_marginEnd="2dp"
		android:layout_marginBottom="8dp"
		android:background="@color/medication_stock_main"
		app:layout_constraintBottom_toTopOf="@+id/textView7"
		app:layout_constraintEnd_toEndOf="parent" />

	<ImageView
		android:id="@+id/imageView3"
		android:layout_width="31dp"
		android:layout_height="31dp"
		android:layout_marginTop="10dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.504"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/baseline_medication"
		app:tint="@color/medication_stock_main" />

	<TextView
		android:id="@+id/nom"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:paddingHorizontal="2dp"
		android:text="@string/doliprane"
		android:textColor="@color/medication_stock_main"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView3" />

	<TextView
		android:id="@+id/textView3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="4dp"
		android:layout_marginTop="4dp"
		android:text="@string/expiration"
		android:textColor="@color/medication_stock_main"
		android:textSize="12dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/view" />

	<TextView
		android:id="@+id/textView4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="6dp"
		android:text="@string/r_serves"
		android:textColor="@color/medication_stock_main"
		android:textSize="12dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView3" />

	<TextView
		android:id="@+id/expiration"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dp"
		android:layout_marginEnd="8dp"
		android:text="@string/expirationText"
		android:textColor="@color/medication_stock_main"
		android:textSize="12dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/view" />

	<TextView
		android:id="@+id/unite"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:text="@string/uniteText"
		android:textColor="@color/medication_stock_main"
		android:textSize="12dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/expiration" />

	<TextView
		android:id="@+id/textView7"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="6dp"
		android:layout_marginTop="16dp"
		android:text="@string/statut"
		android:textColor="@color/medication_stock_main"
		android:textSize="12dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView4" />

	<TextView
		android:id="@+id/statut"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="18dp"
		android:layout_marginEnd="8dp"
		android:text="@string/statutText"
		android:textColor="@color/medication_stock_main"
		android:textSize="12dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/unite" />
</androidx.constraintlayout.widget.ConstraintLayout>